--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,10 @@
         <div class="nav-link" href="#"><%= link_to 'Contacto', home_contacto_path %></div>
       </li>
       <li>
-       <div class="nav-link" href="#"> <%= link_to 'Recursos', home_recursos_path %></div>
+       <div class="nav-link" href="#"> <%= link_to 'Articulos de Recursos', posts_path %></div>
+      </li>
+      <li>
+       <div class="nav-link" href="#"> <%= link_to 'Cursos', 'https://www.udemy.com/course/inteligencia-emocional-y-autocoaching-para-padres/' %></div>
       </li>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Radio</a>
