--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,5 +81,13 @@
     
     <%= yield %>
     
+  
+</div>
 
+
+<script>
+setTimeout(function(){
+youtube_frame.children[1].childNodes[2].childNodes[3].style.zIndex = 0;
+}, 5000);
+</script>
 
