--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -17,7 +17,9 @@
 </head>
 <body>
   <div style="position: relative; left: 0; top: 0;">
-<iframe src= 'https://www.youtube.com/channel/UCy8RQ-Rm1da7kGN0TyVlWxg/videos' frameborder='0' width='100%' height='1000'></iframe>
+<div class = "container" style = "margin-top: 10%"  id= "youtube_frame" >
+<div  class="elfsight-app-387ab003-542a-4beb-aaa0-0d17937f228c">
+</div>
 <div class = "fishes">
    <%= image_tag("radio.jpg", width: "550", height: "350", alt: "Edit Entry") %> 
 </div>
@@ -26,4 +28,9 @@
 </div>
   </div>
 </body>
+<script src="https://apps.elfsight.com/p/platform.js" data-turbolinks-permanent style= "z-index: unset;">
+
+
+</script>
 </html>
+
