--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -336,7 +336,7 @@ terapeuta individual, de pareja, familiar, de grupo, educador, profesor universi
         </div>
     </div>
 </section>
-<script src="https://apps.elfsight.com/p/platform.js" data-turbolinks-permanent style= "z-index: unset;">
+<script src="https://apps.elfsight.com/p/platform.js" data-turbolinks-permanent>
 
 </script>
 
