modification to layour for social-share button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,11 @@
 </nav>
 
 </div>
-
+<div class = "sticky-container">
+    <div class="sticky">
+    <%= rails_social_share_button_tag('Share to Facebook', url: root_path, desc: "Orientacion Familiar Una Guia Para El Hogar") %>
+    </div>
+</div>
 
   </head>
 
