--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,7 +1,8 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-* {
+* 
+    * {
       font-family: "Lora", serif;
     }
 
@@ -15,10 +16,6 @@
       flex-direction: row;  
       justify-content: space-around;
       flex-wrap: wrap;
-    }
-    
-    .author{
-      text-align: center;
     }
 
     .post-card {
@@ -42,5 +39,4 @@
       margin-left: 10px;
       margin-right: 10px;
     }
-    
  
