number of visitors gadget

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -324,6 +324,8 @@ terapeuta individual, de pareja, familiar, de grupo, educador, profesor universi
 
 </script>
 
+<div id="sfcy16hzy2wr47eb39shqtmfem2umjzdth5"></div><script type="text/javascript" src="https://counter10.stat.ovh/private/counter.js?c=y16hzy2wr47eb39shqtmfem2umjzdth5&down=async" async></script><br><a href="https://www.freecounterstat.com">free web counters</a><noscript><a href="https://www.freecounterstat.com" title="free web counters"><img src="https://counter10.stat.ovh/private/freecounterstat.php?c=y16hzy2wr47eb39shqtmfem2umjzdth5" border="0" title="free web counters" alt="free web counters"></a></noscript>
+
 
 
 
