--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -20,10 +20,10 @@
 <div class = "container" style = "margin-top: 10%"  id= "youtube_frame" >
 <div  class="elfsight-app-387ab003-542a-4beb-aaa0-0d17937f228c">
 </div>
-<div class = "fishes">
+<div class = "fishes" >
    <%= image_tag("radio.jpg", width: "550", height: "350", alt: "Edit Entry") %> 
 </div>
-<div ="fish">
+<div ="fish" style="margin-top: -29%;position: absolute; margin-left: 35%; */">
     <iframe src="https://cdn.voscast.com/player/player.php?host=s8.voscast.com&amp;port=8106" scrolling="no" width="150" height="30" frameborder="0"></iframe>
 </div>
   </div>
