--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -23,7 +23,7 @@
 <div class = "fishes" >
    <%= image_tag("radio.jpg", width: "550", height: "350", alt: "Edit Entry") %> 
 </div>
-<div ="fish" style="margin-top: -29%;position: absolute; margin-left: 35%; */">
+<div ="fish" style="margin-top: -14%;position: absolute; margin-left: 30%;">
     <iframe src="https://cdn.voscast.com/player/player.php?host=s8.voscast.com&amp;port=8106" scrolling="no" width="150" height="30" frameborder="0"></iframe>
 </div>
   </div>
