--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -66,7 +66,9 @@
 
 
     <div class="col-md-6 " style = "margin-top:1% ;" >
-        <iframe width="100%" height="500" src="https://www.youtube.com/embed/SME4sfFqN3g?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1>En vivo COVID-19 en Pensylvania por Condado</h1>
+        <iframe src="https://www.google.com/maps/d/embed?mid=1lpLPPrltIuVkwFtXhoWdWEA4B1DvNmne" width="640" height="480"></iframe>
+        
     </div>
 
     <div class = "col-md-3" style = "margin-top:1% ;" >
