--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,34 +45,13 @@
 
  
 <div class="row">
-
-
-
-
-    <div class ="col-md-3" style = " margin-top: 5%;">
-    <div class="grid one post-16656 post type-post status-publish format-standard has-post-thumbnail hentry category-canada-available-countries category-espanol category-free-shipping category-functional-food category-nutrition category-nutrition-and-wellness category-plant-based category-prices category-united-states category-weight-loss category-zeal-for-life-2 category-zeal-for-life-products tag-auto-shipment tag-canada tag-canister-blast-off tag-free-shipping tag-gluten-free-supplements tag-glutenfree tag-health tag-healthy-food tag-healthy-lifestyle tag-kosher tag-nutrition tag-plant-based tag-puerto-rico tag-usa tag-vegan tag-zeal-canister-sale tag-zeal-drink tag-zeal-for-life tag-zeal-for-life-drink tag-zeal-for-life-in-canada tag-zeal-products tag-zeal-supplement tag-zurvita-customer">
-    <div class="featured-image">
-        <div class="preview">
-            <a href="https://healthroads.net/2019/01/06/zeal-for-life-canister-for-39-95-free-shipping/" title="Permalink to Zeal For Life Canister for $39.95 + FREE&nbsp;SHIPPING!" rel="bookmark">
-            <img src="https://zealforlifeproductsdotcom1.files.wordpress.com/2019/01/blst.jpg?w=155&amp;h=110&amp;crop=1" class="attachment-suburbia-thumbnail size-suburbia-thumbnail wp-post-image" alt="" srcset="https://zealforlifeproductsdotcom1.files.wordpress.com/2019/01/blst.jpg?w=155&amp;h=110&amp;crop=1 155w, https://zealforlifeproductsdotcom1.files.wordpress.com/2019/01/blst.jpg?w=310&amp;h=220&amp;crop=1 310w, https://zealforlifeproductsdotcom1.files.wordpress.com/2019/01/blst.jpg?w=150&amp;h=106&amp;crop=1 150w, https://zealforlifeproductsdotcom1.files.wordpress.com/2019/01/blst.jpg?w=300&amp;h=213&amp;crop=1 300w" sizes="(max-width: 155px) 100vw, 155px" data-attachment-id="16658" data-permalink="https://healthroads.net/2019/01/06/zeal-for-life-canister-for-39-95-free-shipping/blst/" data-orig-file="https://zealforlifeproductsdotcom1.files.wordpress.com/2019/01/blst.jpg" data-orig-size="960,960" data-comments-opened="1" data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;0&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;0&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;,&quot;orientation&quot;:&quot;0&quot;}" data-image-title="blst" data-image-description="" data-medium-file="https://zealforlifeproductsdotcom1.files.wordpress.com/2019/01/blst.jpg?w=300" data-large-file="https://zealforlifeproductsdotcom1.files.wordpress.com/2019/01/blst.jpg?w=547" width="155" height="110">           </a>
+    
+    <div class="col-md-12 sm-auto" >
+        <div class= "col-sm">
+           <h1>En vivo COVID-19 en Pensylvania por Condado</h1> 
         </div>
-    </div><!-- .featured-image -->
-        <h2><a href="https://healthroads.net/2019/01/06/zeal-for-life-canister-for-39-95-free-shipping/" rel="bookmark">Zeal For Life Canister for $39.95 + FREE SHIPPING!</a></h2>
-        <p>Get your Zeal Nutritional drink for $39.95 + FREE SHIPPING!</p>
-    <div class="time">
-                    January 6, 2019                         · <a href="https://healthroads.net/2019/01/06/zeal-for-life-canister-for-39-95-free-shipping/#comments">5 Comments</a>                  </div><!-- .time -->
-</div>
-    </div>
-
-
-    <div class="col-md-6 " style = "margin-top:1% ;" >
-        <h1>En vivo COVID-19 en Pensylvania por Condado</h1>
-        <iframe src="https://www.google.com/maps/d/embed?mid=1lpLPPrltIuVkwFtXhoWdWEA4B1DvNmne" width="640" height="480"></iframe>
-        
-    </div>
-
-    <div class = "col-md-3" style = "margin-top:1% ;" >
-       <iframe src="https://www.health.gov/espanol/myhealthfinder?widget=true" name="myhealthfinderframe" frameborder="0" id="myhealthfinderframe" scrolling="yes" height="485" width="100%" marginheight="0" title="myhealthfinder widget" marginwidth="0"><p>Your browser does not support iframes.</p></iframe>
+        <iframe src="https://www.google.com/maps/d/embed?mid=1lpLPPrltIuVkwFtXhoWdWEA4B1DvNmne" width="100%" height="350px">
+        </iframe>
     </div>
 
 </div>
